--- a/src/VoIPClient/VoIPClient.vcxproj.filters
+++ b/src/VoIPClient/VoIPClient.vcxproj.filters
@@ -103,6 +103,9 @@
     <ClCompile Include="StartDlg.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="CallView.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AccountLoginDlg.h">
@@ -241,6 +244,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="StartDlg.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="CallView.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
