1) TestCallDlg 추가 (modaless)

--- a/src/VoIPClient/VoIPClient.rc
+++ b/src/VoIPClient/VoIPClient.rc
@@ -256,6 +256,8 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "사용자 등록",                      ID_TEST_CREATE_USER
         MENUITEM "사용자 정보 수정",                   ID_TEST_UPDATE_USER
+        MENUITEM SEPARATOR
+        MENUITEM "Test",                        ID_SETTING_TEST
     END
     POPUP "보기(&V)"
     BEGIN
@@ -404,8 +406,8 @@ BEGIN
     EDITTEXT        IDC_ED_PASSWORD_ANSWER,75,141,150,17,ES_AUTOHSCROLL
 END
 
-IDD_DLG_CALL_VIEW DIALOGEX 0, 0, 588, 401
-STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_SYSMENU
+IDD_DLG_CALL_VIEW DIALOGEX 0, 0, 589, 401
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_CHILD | WS_CAPTION | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         IDB_BITMAP1,IDC_DISPLAY,"Static",SS_BITMAP | SS_CENTERIMAGE | SS_REALSIZEIMAGE | WS_DISABLED,7,7,163,109,WS_EX_ACCEPTFILES
@@ -413,8 +415,8 @@ BEGIN
     CONTROL         "Client End Call",IDC_Client_EndCall,"MfcButton",WS_TABSTOP,70,317,107,14
     CONTROL         "Server Start Call",IDC_Server_StartCall,"MfcButton",WS_TABSTOP,273,294,107,14
     CONTROL         "Server End Call",IDC_Server_EndCall,"MfcButton",WS_TABSTOP,273,317,107,14
-    CONTROL         "Server Add Client",IDC_Server_AddClient,"MfcButton",WS_TABSTOP,474,294,107,14
-    CONTROL         "Server Remove Client",IDC_Server_RemoveClient,"MfcButton",WS_TABSTOP,474,317,107,14
+    CONTROL         "Server Add Client",IDC_Server_AddClient,"MfcButton",WS_TABSTOP,475,294,107,14
+    CONTROL         "Server Remove Client",IDC_Server_RemoveClient,"MfcButton",WS_TABSTOP,475,317,107,14
     LTEXT           "Client Start/End",IDC_STATIC,15,126,52,8,0,WS_EX_RIGHT
     LTEXT           "Server Start/End",IDC_STATIC,215,126,55,8,0,WS_EX_RIGHT
     CONTROL         "",IDC_Client_EncAlgo,"MfcFontComboBox",WS_DISABLED | WS_VSCROLL | WS_TABSTOP | 0x312,70,250,107,30
@@ -441,12 +443,12 @@ BEGIN
     LTEXT           "Audio Codec",IDC_STATIC,229,229,41,14,SS_CENTERIMAGE,WS_EX_RIGHT
     LTEXT           "Encryption Algorithm",IDC_STATIC,203,248,67,14,SS_CENTERIMAGE,WS_EX_RIGHT
     LTEXT           "Encryption Key",IDC_STATIC,221,270,49,14,SS_CENTERIMAGE,WS_EX_RIGHT
-    EDITTEXT        IDC_Server_RIDForAdd,474,141,107,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_Server_RIDForAdd,475,141,107,14,ES_AUTOHSCROLL
     LTEXT           "Room ID (Or Index)",IDC_STATIC,398,141,70,14,SS_CENTERIMAGE,WS_EX_RIGHT
     LTEXT           "Client IP",IDC_STATIC,407,163,61,14,SS_CENTERIMAGE,WS_EX_RIGHT
-    EDITTEXT        IDC_Server_ClientIP,474,163,107,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_Server_ClientIP,475,163,107,14,ES_AUTOHSCROLL
     LTEXT           "Client ID (Or Index)",IDC_STATIC,401,185,67,14,SS_CENTERIMAGE,WS_EX_RIGHT
-    EDITTEXT        IDC_Server_CID,474,185,107,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_Server_CID,475,185,107,14,ES_AUTOHSCROLL
     LTEXT           "Server Add/Remove",IDC_STATIC,402,126,66,8,0,WS_EX_RIGHT
     EDITTEXT        IDC_Server_ServerIP,272,163,107,14,ES_AUTOHSCROLL
     LTEXT           "Server IP",IDC_STATIC,196,163,73,14,SS_CENTERIMAGE,WS_EX_RIGHT
@@ -590,7 +592,7 @@ BEGIN
     IDD_DLG_CALL_VIEW, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 581
+        RIGHTMARGIN, 582
         TOPMARGIN, 7
         BOTTOMMARGIN, 394
     END
