--- a/src/VoIPClient/VoIPClient.vcxproj.filters
+++ b/src/VoIPClient/VoIPClient.vcxproj.filters
@@ -82,6 +82,9 @@
     <ClCompile Include="..\media\VideoMediaPipeline.cpp">
       <Filter>media</Filter>
     </ClCompile>
+    <ClCompile Include="CommandLineInterface.cpp">
+      <Filter>Session</Filter>
+    </ClCompile>
     <ClCompile Include="..\media\media_types.cpp">
       <Filter>media</Filter>
     </ClCompile>
@@ -96,6 +99,9 @@
     </ClCompile>
     <ClCompile Include="SessionRegisterDlg.cpp">
       <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="session\UiController.cpp">
+      <Filter>Session</Filter>
     </ClCompile>
     <ClCompile Include="SessionView.cpp">
       <Filter>소스 파일</Filter>
@@ -222,11 +228,20 @@
     <ClInclude Include="..\common\debug.h">
       <Filter>common</Filter>
     </ClInclude>
+    <ClInclude Include="CommandLineInterface.h">
+      <Filter>Session</Filter>
+    </ClInclude>
     <ClInclude Include="..\media\pipeline_monitorable.h">
       <Filter>media</Filter>
     </ClInclude>
     <ClInclude Include="..\media\media_types.h">
       <Filter>media</Filter>
+    </ClInclude>
+    <ClInclude Include="session\IUiController.h">
+      <Filter>Session</Filter>
+    </ClInclude>
+    <ClInclude Include="session\Data.h">
+      <Filter>Session</Filter>
     </ClInclude>
     <ClInclude Include="ContactRegisterDlg.h">
       <Filter>헤더 파일</Filter>
