--- a/src/VoIPClient/VoIPClient.rc
+++ b/src/VoIPClient/VoIPClient.rc
@@ -406,7 +406,7 @@ BEGIN
 END
 
 IDD_DLG_CALL_VIEW DIALOGEX 0, 0, 589, 401
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_CHILD | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         IDB_BITMAP1,IDC_DISPLAY,"Static",SS_BITMAP | SS_CENTERIMAGE | SS_REALSIZEIMAGE | WS_DISABLED,7,7,163,109,WS_EX_ACCEPTFILES
@@ -767,7 +767,7 @@ BEGIN
 0x5f6e, 0x6d49, 0x6761, 0x4f65, 0x526e, 0x6769, 0x7468, 0x463e, 0x4c41, 
 0x4553, 0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x6d49, 0x6761, 
 0x4f65, 0x526e, 0x6769, 0x7468, "\076" 
-    IDC_MFCBTN_RESET_PW, 0x37c, 369, 0
+    1012, 0x37c, 369, 0
 0x4d3c, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x535f, 0x7974, 0x656c, 0x343e, 
 0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x7453, 0x6c79, 0x3e65, 
 0x4d3c, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x415f, 0x7475, 0x736f, 0x7a69, 
