1) Session / Contact : Join / Delete 추가

--- a/src/VoIPClient/VoIPClient.rc
+++ b/src/VoIPClient/VoIPClient.rc
@@ -213,6 +213,8 @@ IDR_SORT TOOLBAR 16, 15
 BEGIN
     BUTTON      ID_SORT_MENU
     BUTTON      ID_NEW_FOLDER
+    BUTTON      ID_DELETE_USER
+    BUTTON      ID_JOIN_SESSION
 END
 
 IDR_EXPLORER TOOLBAR 16, 15
