--- a/src/VoIPClient/VoIPClient.rc
+++ b/src/VoIPClient/VoIPClient.rc
@@ -380,7 +380,7 @@ BEGIN
     DEFPUSHBUTTON   "»Æ¿Œ",IDOK,113,41,50,14,WS_GROUP
 END
 
-IDD_DLG_ACCOUNT_LOGIN DIALOGEX 0, 0, 311, 238
+IDD_DLG_ACCOUNT_LOGIN DIALOGEX 0, 0, 313, 176
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Account Login"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
@@ -389,22 +389,28 @@ BEGIN
     EDITTEXT        IDC_ED_PASSWORD,75,74,158,14,ES_PASSWORD | ES_AUTOHSCROLL
     CONTROL         "Login",IDC_MFCBTN_LOGIN,"MfcButton",WS_TABSTOP,75,106,72,27
     CONTROL         "Sign In",IDC_MFCBTN_SIGN_IN,"MfcButton",WS_TABSTOP,161,106,72,27
-    ICON            IDI_MASK,IDC_ST_LOGO,143,20,20,20
+    ICON            IDI_MASK,IDC_ST_LOGO,143,20,21,20
 END
 
-IDD_DLG_MANAGE_ACCOUNT DIALOGEX 0, 0, 309, 243
+IDD_DLG_MANAGE_ACCOUNT DIALOGEX 0, 0, 251, 214
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Create/Update Account"
+CAPTION "Sign-In"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    EDITTEXT        IDC_ED_EMAIL_ID,75,31,150,17,ES_AUTOHSCROLL
-    EDITTEXT        IDC_ED_PASSWORD,75,54,150,17,ES_AUTOHSCROLL
-    EDITTEXT        IDC_ED_NAME,75,77,150,17,ES_AUTOHSCROLL
-    CONTROL         "Create",IDC_MFCBTN_CREATE,"MfcButton",WS_TABSTOP,75,171,74,30
-    CONTROL         "Update",IDC_MFCBTN_UPDATE,"MfcButton",WS_TABSTOP,151,171,74,30
-    EDITTEXT        IDC_ED_LAST_NAME,75,100,150,17,ES_AUTOHSCROLL
-    COMBOBOX        IDC_COMBO1,75,123,150,24,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_ED_PASSWORD_ANSWER,75,141,150,17,ES_AUTOHSCROLL
+    EDITTEXT        IDC_ED_ACCOUNT_ID,73,25,150,17,ES_AUTOHSCROLL
+    EDITTEXT        IDC_ED_PASSWORD,73,48,150,17,ES_AUTOHSCROLL
+    EDITTEXT        IDC_ED_EMAIL,73,71,150,17,ES_AUTOHSCROLL
+    EDITTEXT        IDC_ED_LAST_NAME,73,95,150,17,ES_AUTOHSCROLL
+    COMBOBOX        IDC_COMBO_PASSWORD_QUESTION,73,121,150,24,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        IDC_ED_PASSWORD_ANSWER,73,142,150,17,ES_AUTOHSCROLL
+    CONTROL         "Create new account",IDC_MFCBTN_CREATE,"MfcButton",WS_TABSTOP,21,174,99,18
+    CONTROL         "Cancel",IDC_MFCBTN_CANCEL,"MfcButton",WS_TABSTOP,129,174,93,18
+    LTEXT           "ID",IDC_STATIC,29,25,8,8
+    LTEXT           "Password",IDC_STATIC,29,52,32,8
+    LTEXT           "Email",IDC_STATIC,29,76,17,8
+    LTEXT           "Name",IDC_STATIC,29,100,19,8
+    LTEXT           "Password Question",IDC_STATIC,29,119,35,22
+    LTEXT           "Password Answer",IDC_STATIC,29,140,42,18
 END
 
 IDD_DLG_CALL_VIEW DIALOGEX 0, 0, 589, 401
@@ -577,17 +583,17 @@ BEGIN
     IDD_DLG_ACCOUNT_LOGIN, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 304
+        RIGHTMARGIN, 306
         TOPMARGIN, 7
-        BOTTOMMARGIN, 231
+        BOTTOMMARGIN, 169
     END
 
     IDD_DLG_MANAGE_ACCOUNT, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 302
+        RIGHTMARGIN, 244
         TOPMARGIN, 7
-        BOTTOMMARGIN, 236
+        BOTTOMMARGIN, 207
     END
 
     IDD_DLG_CALL_VIEW, DIALOG
@@ -658,8 +664,7 @@ BEGIN
     0, 0, 0, 0,
     0, 0, 0, 0,
     0, 0, 0, 0,
-    100, 100, 50, 50,
-    0, 0, 0, 0
+    100, 100, 50, 50
 END
 
 IDD_DLG_MANAGE_ACCOUNT AFX_DIALOG_LAYOUT
@@ -769,28 +774,6 @@ BEGIN
 0x5f6e, 0x6d49, 0x6761, 0x4f65, 0x526e, 0x6769, 0x7468, 0x463e, 0x4c41, 
 0x4553, 0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x6d49, 0x6761, 
 0x4f65, 0x526e, 0x6769, 0x7468, "\076" 
-    1012, 0x37c, 369, 0
-0x4d3c, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x535f, 0x7974, 0x656c, 0x343e, 
-0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x7453, 0x6c79, 0x3e65, 
-0x4d3c, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x415f, 0x7475, 0x736f, 0x7a69, 
-0x3e65, 0x4146, 0x534c, 0x3c45, 0x4d2f, 0x4346, 0x7542, 0x7474, 0x6e6f, 
-0x415f, 0x7475, 0x736f, 0x7a69, 0x3e65, 0x4d3c, 0x4346, 0x7542, 0x7474, 
-0x6e6f, 0x545f, 0x6f6f, 0x746c, 0x7069, 0x3c3e, 0x4d2f, 0x4346, 0x7542, 
-0x7474, 0x6e6f, 0x545f, 0x6f6f, 0x746c, 0x7069, 0x3c3e, 0x464d, 0x4243, 
-0x7475, 0x6f74, 0x5f6e, 0x7546, 0x6c6c, 0x6554, 0x7478, 0x6f54, 0x6c6f, 
-0x543e, 0x5552, 0x3c45, 0x4d2f, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x465f, 
-0x6c75, 0x546c, 0x7865, 0x5474, 0x6f6f, 0x3e6c, 0x4d3c, 0x4346, 0x7542, 
-0x7474, 0x6e6f, 0x435f, 0x7275, 0x6f73, 0x5472, 0x7079, 0x3e65, 0x3131, 
-0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x7543, 0x7372, 0x726f, 
-0x7954, 0x6570, 0x3c3e, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x6d49, 
-0x6761, 0x5465, 0x7079, 0x3e65, 0x3c38, 0x4d2f, 0x4346, 0x7542, 0x7474, 
-0x6e6f, 0x495f, 0x616d, 0x6567, 0x7954, 0x6570, 0x3c3e, 0x464d, 0x4243, 
-0x7475, 0x6f74, 0x5f6e, 0x6d49, 0x6761, 0x4f65, 0x546e, 0x706f, 0x463e, 
-0x4c41, 0x4553, 0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x6d49, 
-0x6761, 0x4f65, 0x546e, 0x706f, 0x3c3e, 0x464d, 0x4243, 0x7475, 0x6f74, 
-0x5f6e, 0x6d49, 0x6761, 0x4f65, 0x526e, 0x6769, 0x7468, 0x463e, 0x4c41, 
-0x4553, 0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x6d49, 0x6761, 
-0x4f65, 0x526e, 0x6769, 0x7468, "\076" 
     0
 END
 
@@ -818,7 +801,7 @@ BEGIN
 0x5f6e, 0x6d49, 0x6761, 0x4f65, 0x526e, 0x6769, 0x7468, 0x463e, 0x4c41, 
 0x4553, 0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x6d49, 0x6761, 
 0x4f65, 0x526e, 0x6769, 0x7468, "\076" 
-    IDC_MFCBTN_UPDATE, 0x37c, 369, 0
+    IDC_MFCBTN_CANCEL, 0x37c, 369, 0
 0x4d3c, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x535f, 0x7974, 0x656c, 0x343e, 
 0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x7453, 0x6c79, 0x3e65, 
 0x4d3c, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x415f, 0x7475, 0x736f, 0x7a69, 
