1) ResetPasswordDlg Update 2) SessionRegisterDlg Update 3) SessionView Update

--- a/src/VoIPClient/VoIPClient.rc
+++ b/src/VoIPClient/VoIPClient.rc
@@ -479,22 +479,22 @@ BEGIN
     CONTROL         "Start",IDC_MFCBTN_START,"MfcButton",WS_TABSTOP,243,168,74,20
 END
 
-IDD_DLG_SESSION_REGISTER DIALOGEX 0, 0, 309, 214
+IDD_DLG_SESSION_REGISTER DIALOGEX 0, 0, 395, 214
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Dialog"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "Create",IDOK,198,193,50,14
-    PUSHBUTTON      "취소",IDCANCEL,252,193,50,14
-    CONTROL         "",IDC_LIST3,"SysListView32",LVS_LIST | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,66,129,103
-    CONTROL         "",IDC_LIST4,"SysListView32",LVS_LIST | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,173,66,129,102
+    DEFPUSHBUTTON   "Create",IDOK,287,193,50,14
+    PUSHBUTTON      "취소",IDCANCEL,338,193,50,14
+    CONTROL         "",IDC_LT_CONTACT,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,66,175,103
+    CONTROL         "",IDC_LT_PARTICIPANTS,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,213,66,175,102
     CONTROL         "",IDC_DP_DATE,"SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,7,22,93,15
     LTEXT           "Contact List",IDC_STATIC,7,50,118,8
-    LTEXT           "Participants",IDC_STATIC,173,50,118,8
-    CONTROL         ">",IDC_MFCBTN_RIGHT,"MfcButton",WS_TABSTOP,146,101,17,14
-    CONTROL         "<",IDC_MFCBTN_LEFT,"MfcButton",WS_TABSTOP,146,119,17,14
+    LTEXT           "Participants",IDC_STATIC,215,50,118,8
+    CONTROL         ">",IDC_MFCBTN_RIGHT,"MfcButton",WS_TABSTOP,188,101,17,14
+    CONTROL         "<",IDC_MFCBTN_LEFT,"MfcButton",WS_TABSTOP,188,119,17,14
     CONTROL         "",IDC_DP_TIME_START,"SysDateTimePick32",DTS_RIGHTALIGN | DTS_UPDOWN | WS_TABSTOP | 0x8,108,22,93,15
-    CONTROL         "",IDC_DP_TIME_END,"SysDateTimePick32",DTS_RIGHTALIGN | DTS_UPDOWN | WS_TABSTOP | 0x8,209,22,93,15
+    CONTROL         "",IDC_DP_TIME_END,"SysDateTimePick32",DTS_RIGHTALIGN | DTS_UPDOWN | WS_TABSTOP | 0x8,215,22,93,15
     LTEXT           "Date",IDC_STATIC,7,7,81,8
     LTEXT           "Start Time",IDC_STATIC,111,7,81,8
     LTEXT           "End Time",IDC_STATIC,214,7,81,8
@@ -519,8 +519,8 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "확인",IDOK,198,155,50,14
     PUSHBUTTON      "취소",IDCANCEL,252,155,50,14
-    EDITTEXT        IDC_ED_PASSWORD,71,28,157,17,ES_AUTOHSCROLL
-    COMBOBOX        IDC_CB_PASSWORD_QUESTION,71,54,157,20,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        IDC_ED_PASSWORD,71,28,157,17,ES_PASSWORD | ES_AUTOHSCROLL
+    COMBOBOX        IDC_CB_PASSWORD_QUESTION,71,54,157,75,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     EDITTEXT        IDC_ED_PASSWORD_ANSWER,71,75,157,17,ES_AUTOHSCROLL
 END
 
@@ -623,7 +623,7 @@ BEGIN
     IDD_DLG_SESSION_REGISTER, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 302
+        RIGHTMARGIN, 388
         TOPMARGIN, 7
         BOTTOMMARGIN, 207
     END
