--- a/src/VoIPClient/VoIPClient.rc
+++ b/src/VoIPClient/VoIPClient.rc
@@ -380,16 +380,17 @@ BEGIN
     DEFPUSHBUTTON   "확인",IDOK,113,41,50,14,WS_GROUP
 END
 
-IDD_DLG_ACCOUNT_LOGIN DIALOGEX 0, 0, 313, 176
+IDD_DLG_ACCOUNT_LOGIN DIALOGEX 0, 0, 249, 175
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Account Login"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    EDITTEXT        IDC_ED_EMAIL_ID,75,51,158,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_ED_PASSWORD,75,74,158,14,ES_PASSWORD | ES_AUTOHSCROLL
-    CONTROL         "Login",IDC_MFCBTN_LOGIN,"MfcButton",WS_TABSTOP,75,106,72,27
-    CONTROL         "Sign In",IDC_MFCBTN_SIGN_IN,"MfcButton",WS_TABSTOP,161,106,72,27
-    ICON            IDI_MASK,IDC_ST_LOGO,143,20,21,20
+    EDITTEXT        IDC_ED_EMAIL_ID,47,52,158,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_ED_PASSWORD,47,74,158,14,ES_PASSWORD | ES_AUTOHSCROLL
+    CONTROL         "Login",IDC_MFCBTN_LOGIN,"MfcButton",WS_TABSTOP,47,98,75,19
+    CONTROL         "Sign In",IDC_MFCBTN_SIGN_IN,"MfcButton",WS_TABSTOP,128,98,76,19
+    ICON            IDI_MASK,IDC_ST_LOGO,115,21,21,20
+    CONTROL         "Reset Password",IDC_MFCBTN_RESET_PW,"MfcButton",WS_TABSTOP,47,138,157,19
 END
 
 IDD_DLG_MANAGE_ACCOUNT DIALOGEX 0, 0, 251, 214
@@ -512,16 +513,36 @@ BEGIN
     CONTROL         "",IDC_LT_CONTACT_NAMES,"SysListView32",LVS_REPORT | LVS_SORTASCENDING | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,28,182,141
 END
 
-IDD_RESET_PASSWORD DIALOGEX 0, 0, 309, 176
+IDD_RESET_PASSWORD DIALOGEX 0, 0, 267, 177
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Dialog"
+CAPTION "Reset Password"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "확인",IDOK,198,155,50,14
-    PUSHBUTTON      "취소",IDCANCEL,252,155,50,14
-    EDITTEXT        IDC_ED_PASSWORD,71,28,157,17,ES_AUTOHSCROLL
-    COMBOBOX        IDC_CB_PASSWORD_QUESTION,71,54,157,20,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_ED_PASSWORD_ANSWER,71,75,157,17,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "Reset Password",ID_MFCBTN_RESET,35,137,108,18
+    PUSHBUTTON      "Cancel",IDC_MFCBTN_CANCEL,149,137,86,18
+    EDITTEXT        IDC_ED_PASSWORD,95,58,139,17,ES_AUTOHSCROLL
+    COMBOBOX        IDC_CB_PASSWORD_QUESTION,95,84,139,20,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        IDC_ED_PASSWORD_ANSWER,95,105,139,17,ES_AUTOHSCROLL
+    LTEXT           "New Password",IDC_STATIC,41,61,48,8
+    RTEXT           "Original Password Answer",IDC_STATIC,31,104,58,21
+    RTEXT           "Original Password Question",IDC_STATIC,27,81,61,19
+    EDITTEXT        IDC_ED_ID,95,28,139,17,ES_AUTOHSCROLL
+    LTEXT           "ID",IDC_STATIC,76,33,8,8
+END
+
+IDD_DLG_UPDATE_ACCOUNT DIALOGEX 0, 0, 249, 136
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Update My Account"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    EDITTEXT        IDC_ED_EMAIL,90,15,131,17,ES_AUTOHSCROLL
+    EDITTEXT        IDC_ED_LAST_NAME,89,39,132,17,ES_AUTOHSCROLL
+    CONTROL         "Update my account",IDC_MFCBTN_UPDATE_CONTACT,"MfcButton",WS_TABSTOP,20,99,99,18
+    CONTROL         "Cancel",IDC_MFCBTN_CANCEL,"MfcButton",WS_TABSTOP,128,99,93,18
+    LTEXT           "New Email",IDC_STATIC,27,20,33,8
+    LTEXT           "New Name",IDC_STATIC,27,44,35,8
+    EDITTEXT        IDC_ED_PASSWORD,89,67,131,17,ES_AUTOHSCROLL
+    LTEXT           "New Password",IDC_STATIC,28,72,48,8
 END
 
 
@@ -583,9 +604,9 @@ BEGIN
     IDD_DLG_ACCOUNT_LOGIN, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 306
+        RIGHTMARGIN, 242
         TOPMARGIN, 7
-        BOTTOMMARGIN, 169
+        BOTTOMMARGIN, 168
     END
 
     IDD_DLG_MANAGE_ACCOUNT, DIALOG
@@ -639,9 +660,17 @@ BEGIN
     IDD_RESET_PASSWORD, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 302
+        RIGHTMARGIN, 260
         TOPMARGIN, 7
-        BOTTOMMARGIN, 169
+        BOTTOMMARGIN, 170
+    END
+
+    IDD_DLG_UPDATE_ACCOUNT, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 242
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 129
     END
 END
 #endif    // APSTUDIO_INVOKED
@@ -664,7 +693,8 @@ BEGIN
     0, 0, 0, 0,
     0, 0, 0, 0,
     0, 0, 0, 0,
-    100, 100, 50, 50
+    100, 100, 50, 50,
+    0, 0, 0, 0
 END
 
 IDD_DLG_MANAGE_ACCOUNT AFX_DIALOG_LAYOUT
@@ -698,6 +728,11 @@ BEGIN
 END
 
 IDD_RESET_PASSWORD AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_DLG_UPDATE_ACCOUNT AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
@@ -753,6 +788,28 @@ BEGIN
 0x3c45, 0x4d2f, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x495f, 0x616d, 0x6567, 
 0x6e4f, 0x6952, 0x6867, 0x3e74, 
     IDC_MFCBTN_SIGN_IN, 0x37c, 369, 0
+0x4d3c, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x535f, 0x7974, 0x656c, 0x343e, 
+0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x7453, 0x6c79, 0x3e65, 
+0x4d3c, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x415f, 0x7475, 0x736f, 0x7a69, 
+0x3e65, 0x4146, 0x534c, 0x3c45, 0x4d2f, 0x4346, 0x7542, 0x7474, 0x6e6f, 
+0x415f, 0x7475, 0x736f, 0x7a69, 0x3e65, 0x4d3c, 0x4346, 0x7542, 0x7474, 
+0x6e6f, 0x545f, 0x6f6f, 0x746c, 0x7069, 0x3c3e, 0x4d2f, 0x4346, 0x7542, 
+0x7474, 0x6e6f, 0x545f, 0x6f6f, 0x746c, 0x7069, 0x3c3e, 0x464d, 0x4243, 
+0x7475, 0x6f74, 0x5f6e, 0x7546, 0x6c6c, 0x6554, 0x7478, 0x6f54, 0x6c6f, 
+0x543e, 0x5552, 0x3c45, 0x4d2f, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x465f, 
+0x6c75, 0x546c, 0x7865, 0x5474, 0x6f6f, 0x3e6c, 0x4d3c, 0x4346, 0x7542, 
+0x7474, 0x6e6f, 0x435f, 0x7275, 0x6f73, 0x5472, 0x7079, 0x3e65, 0x3131, 
+0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x7543, 0x7372, 0x726f, 
+0x7954, 0x6570, 0x3c3e, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x6d49, 
+0x6761, 0x5465, 0x7079, 0x3e65, 0x3c38, 0x4d2f, 0x4346, 0x7542, 0x7474, 
+0x6e6f, 0x495f, 0x616d, 0x6567, 0x7954, 0x6570, 0x3c3e, 0x464d, 0x4243, 
+0x7475, 0x6f74, 0x5f6e, 0x6d49, 0x6761, 0x4f65, 0x546e, 0x706f, 0x463e, 
+0x4c41, 0x4553, 0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x6d49, 
+0x6761, 0x4f65, 0x546e, 0x706f, 0x3c3e, 0x464d, 0x4243, 0x7475, 0x6f74, 
+0x5f6e, 0x6d49, 0x6761, 0x4f65, 0x526e, 0x6769, 0x7468, 0x463e, 0x4c41, 
+0x4553, 0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x6d49, 0x6761, 
+0x4f65, 0x526e, 0x6769, 0x7468, "\076" 
+    IDC_MFCBTN_RESET_PW, 0x37c, 369, 0
 0x4d3c, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x535f, 0x7974, 0x656c, 0x343e, 
 0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x7453, 0x6c79, 0x3e65, 
 0x4d3c, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x415f, 0x7475, 0x736f, 0x7a69, 
@@ -1096,6 +1153,55 @@ BEGIN
 0x3c45, 0x4d2f, 0x4346, 0x6f43, 0x626d, 0x426f, 0x786f, 0x535f, 0x6f68, 
 0x4477, 0x7665, 0x6369, 0x5465, 0x7079, 0x4665, 0x6e6f, 0x7374, "\076" 
     IDC_SET_HANDLER, 0x37c, 369, 0
+0x4d3c, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x535f, 0x7974, 0x656c, 0x343e, 
+0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x7453, 0x6c79, 0x3e65, 
+0x4d3c, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x415f, 0x7475, 0x736f, 0x7a69, 
+0x3e65, 0x4146, 0x534c, 0x3c45, 0x4d2f, 0x4346, 0x7542, 0x7474, 0x6e6f, 
+0x415f, 0x7475, 0x736f, 0x7a69, 0x3e65, 0x4d3c, 0x4346, 0x7542, 0x7474, 
+0x6e6f, 0x545f, 0x6f6f, 0x746c, 0x7069, 0x3c3e, 0x4d2f, 0x4346, 0x7542, 
+0x7474, 0x6e6f, 0x545f, 0x6f6f, 0x746c, 0x7069, 0x3c3e, 0x464d, 0x4243, 
+0x7475, 0x6f74, 0x5f6e, 0x7546, 0x6c6c, 0x6554, 0x7478, 0x6f54, 0x6c6f, 
+0x543e, 0x5552, 0x3c45, 0x4d2f, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x465f, 
+0x6c75, 0x546c, 0x7865, 0x5474, 0x6f6f, 0x3e6c, 0x4d3c, 0x4346, 0x7542, 
+0x7474, 0x6e6f, 0x435f, 0x7275, 0x6f73, 0x5472, 0x7079, 0x3e65, 0x3131, 
+0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x7543, 0x7372, 0x726f, 
+0x7954, 0x6570, 0x3c3e, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x6d49, 
+0x6761, 0x5465, 0x7079, 0x3e65, 0x3c38, 0x4d2f, 0x4346, 0x7542, 0x7474, 
+0x6e6f, 0x495f, 0x616d, 0x6567, 0x7954, 0x6570, 0x3c3e, 0x464d, 0x4243, 
+0x7475, 0x6f74, 0x5f6e, 0x6d49, 0x6761, 0x4f65, 0x546e, 0x706f, 0x463e, 
+0x4c41, 0x4553, 0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x6d49, 
+0x6761, 0x4f65, 0x546e, 0x706f, 0x3c3e, 0x464d, 0x4243, 0x7475, 0x6f74, 
+0x5f6e, 0x6d49, 0x6761, 0x4f65, 0x526e, 0x6769, 0x7468, 0x463e, 0x4c41, 
+0x4553, 0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x6d49, 0x6761, 
+0x4f65, 0x526e, 0x6769, 0x7468, "\076" 
+    0
+END
+
+IDD_DLG_UPDATE_ACCOUNT DLGINIT
+BEGIN
+    IDC_MFCBTN_UPDATE_CONTACT, 0x37c, 369, 0
+0x4d3c, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x535f, 0x7974, 0x656c, 0x343e, 
+0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x7453, 0x6c79, 0x3e65, 
+0x4d3c, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x415f, 0x7475, 0x736f, 0x7a69, 
+0x3e65, 0x4146, 0x534c, 0x3c45, 0x4d2f, 0x4346, 0x7542, 0x7474, 0x6e6f, 
+0x415f, 0x7475, 0x736f, 0x7a69, 0x3e65, 0x4d3c, 0x4346, 0x7542, 0x7474, 
+0x6e6f, 0x545f, 0x6f6f, 0x746c, 0x7069, 0x3c3e, 0x4d2f, 0x4346, 0x7542, 
+0x7474, 0x6e6f, 0x545f, 0x6f6f, 0x746c, 0x7069, 0x3c3e, 0x464d, 0x4243, 
+0x7475, 0x6f74, 0x5f6e, 0x7546, 0x6c6c, 0x6554, 0x7478, 0x6f54, 0x6c6f, 
+0x543e, 0x5552, 0x3c45, 0x4d2f, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x465f, 
+0x6c75, 0x546c, 0x7865, 0x5474, 0x6f6f, 0x3e6c, 0x4d3c, 0x4346, 0x7542, 
+0x7474, 0x6e6f, 0x435f, 0x7275, 0x6f73, 0x5472, 0x7079, 0x3e65, 0x3131, 
+0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x7543, 0x7372, 0x726f, 
+0x7954, 0x6570, 0x3c3e, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x6d49, 
+0x6761, 0x5465, 0x7079, 0x3e65, 0x3c38, 0x4d2f, 0x4346, 0x7542, 0x7474, 
+0x6e6f, 0x495f, 0x616d, 0x6567, 0x7954, 0x6570, 0x3c3e, 0x464d, 0x4243, 
+0x7475, 0x6f74, 0x5f6e, 0x6d49, 0x6761, 0x4f65, 0x546e, 0x706f, 0x463e, 
+0x4c41, 0x4553, 0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x6d49, 
+0x6761, 0x4f65, 0x546e, 0x706f, 0x3c3e, 0x464d, 0x4243, 0x7475, 0x6f74, 
+0x5f6e, 0x6d49, 0x6761, 0x4f65, 0x526e, 0x6769, 0x7468, 0x463e, 0x4c41, 
+0x4553, 0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x6d49, 0x6761, 
+0x4f65, 0x526e, 0x6769, 0x7468, "\076" 
+    IDC_MFCBTN_CANCEL, 0x37c, 369, 0
 0x4d3c, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x535f, 0x7974, 0x656c, 0x343e, 
 0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x7453, 0x6c79, 0x3e65, 
 0x4d3c, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x415f, 0x7475, 0x736f, 0x7a69, 
