1) ContactRegisterDlg List Sorting None 처리

--- a/src/VoIPClient/VoIPClient.rc
+++ b/src/VoIPClient/VoIPClient.rc
@@ -510,7 +510,7 @@ BEGIN
     PUSHBUTTON      "√Îº“",IDCANCEL,252,155,50,14
     EDITTEXT        IDC_ED_SEARCH_NAME,7,7,182,17,ES_AUTOHSCROLL
     CONTROL         "Search",IDC_MFCBTN_SEARCH,"MfcButton",WS_TABSTOP,199,7,103,18
-    CONTROL         "",IDC_LT_CONTACT_NAMES,"SysListView32",LVS_REPORT | LVS_SORTASCENDING | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,28,182,141
+    CONTROL         "",IDC_LT_CONTACT_NAMES,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,28,182,141
 END
 
 IDD_RESET_PASSWORD DIALOGEX 0, 0, 267, 177
