--- a/src/VoIPClient/VoIPClient.vcxproj.filters
+++ b/src/VoIPClient/VoIPClient.vcxproj.filters
@@ -115,6 +115,9 @@
     <ClCompile Include="UpdateUserAccountDlg.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="MessageBoxDlg.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AccountLoginDlg.h">
@@ -269,6 +272,9 @@
     </ClInclude>
     <ClInclude Include="session\UiController.h">
       <Filter>Session</Filter>
+    </ClInclude>
+    <ClInclude Include="MessageBoxDlg.h">
+      <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
