--- a/src/VoIPServer/VoIPServer.vcxproj
+++ b/src/VoIPServer/VoIPServer.vcxproj
@@ -231,6 +231,8 @@
     <ClInclude Include="session\ITelephonyManager.h" />
     <ClInclude Include="session\SessionControl.h" />
     <ClInclude Include="session\SessionManager.h" />
+    <ClInclude Include="session\ISUiController.h" />
+    <ClInclude Include="session\SUiController.h" />
     <ClInclude Include="session\TelephonyManager.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="ViewTree.h" />
@@ -266,6 +268,7 @@
     <ClCompile Include="session\ContactDb.cpp" />
     <ClCompile Include="session\DatabaseManager.cpp" />
     <ClCompile Include="session\SessionManager.cpp" />
+    <ClCompile Include="session\SUiController.cpp" />
     <ClCompile Include="session\TelephonyManager.cpp" />
     <ClCompile Include="ViewTree.cpp" />
     <ClCompile Include="VoIPServer.cpp" />
