1) CTestCallDlg dlg; 항상 0으로 커밋

--- a/src/VoIPClient/VoIPClient.vcxproj.filters
+++ b/src/VoIPClient/VoIPClient.vcxproj.filters
@@ -458,12 +458,24 @@
     <Image Include="res\sign-in-f.bmp">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="res\connection_0.bmp" />
-    <Image Include="res\connection_1.bmp" />
-    <Image Include="res\echo_0.bmp" />
-    <Image Include="res\echo_1.bmp" />
-    <Image Include="res\vad_0.bmp" />
-    <Image Include="res\vad_1.bmp" />
+    <Image Include="res\connection_0.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\connection_1.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\echo_0.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\echo_1.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\vad_0.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\vad_1.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="VoIPClient.reg" />
