--- a/src/VoIPClient/VoIPClient.rc
+++ b/src/VoIPClient/VoIPClient.rc
@@ -564,7 +564,7 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "확인",IDOK,198,155,50,14
     PUSHBUTTON      "취소",IDCANCEL,252,155,50,14
-    LTEXT           "Static",IDC_ST_MSG,83,47,138,37
+    CTEXT           "Static",IDC_ST_MSG,83,47,138,37,SS_CENTERIMAGE
 END
 
 
