--- a/src/VoIPClient/VoIPClient.rc
+++ b/src/VoIPClient/VoIPClient.rc
@@ -557,14 +557,14 @@ BEGIN
     LTEXT           "New Password",IDC_STATIC,28,72,48,8
 END
 
-IDD_DLG_MSGBOX DIALOGEX 0, 0, 309, 176
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+IDD_DLG_MSGBOX DIALOGEX 0, 0, 199, 87
+STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Dialog"
-FONT 8, "MS Shell Dlg", 400, 0, 0x1
+FONT 16, "MS Reference Sans Serif", 400, 0, 0x0
 BEGIN
-    DEFPUSHBUTTON   "확인",IDOK,198,155,50,14
-    PUSHBUTTON      "취소",IDCANCEL,252,155,50,14
-    CTEXT           "Static",IDC_ST_MSG,83,47,138,37,SS_CENTERIMAGE
+    DEFPUSHBUTTON   "확인",IDOK,49,72,50,14
+    PUSHBUTTON      "취소",IDCANCEL,99,72,50,14
+    CTEXT           "Static",IDC_ST_MSG,29,19,138,37,SS_CENTERIMAGE
 END
 
 
@@ -697,10 +697,9 @@ BEGIN
 
     IDD_DLG_MSGBOX, DIALOG
     BEGIN
-        LEFTMARGIN, 7
-        RIGHTMARGIN, 302
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 169
+        RIGHTMARGIN, 198
+        TOPMARGIN, 1
+        BOTTOMMARGIN, 86
     END
 END
 #endif    // APSTUDIO_INVOKED
