--- a/src/VoIPServer/VoIPServer.vcxproj
+++ b/src/VoIPServer/VoIPServer.vcxproj
@@ -212,6 +212,7 @@
     <ClInclude Include="..\media\VideoMediaPipeline.h" />
     <ClInclude Include="calendarbar.h" />
     <ClInclude Include="ClassView.h" />
+    <ClInclude Include="CommandLineInterface.h" />
     <ClInclude Include="FileView.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="IServerMediaManager.h" />
@@ -251,6 +252,7 @@
     <ClCompile Include="..\media\VideoMediaPipeline.cpp" />
     <ClCompile Include="calendarbar.cpp" />
     <ClCompile Include="ClassView.cpp" />
+    <ClCompile Include="CommandLineInterface.cpp" />
     <ClCompile Include="FileView.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="OutputWnd.cpp" />
