--- a/src/VoIPServer/VoIPServer.vcxproj.filters
+++ b/src/VoIPServer/VoIPServer.vcxproj.filters
@@ -141,6 +141,9 @@
     <ClInclude Include="CommandLineInterface.h">
       <Filter>Session</Filter>
     </ClInclude>
+    <ClInclude Include="ContactListView.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="VoIPServer.cpp">
@@ -230,6 +233,9 @@
     <ClCompile Include="CommandLineInterface.cpp">
       <Filter>Session</Filter>
     </ClCompile>
+    <ClCompile Include="ContactListView.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Midl Include="VoIPServer.idl">
@@ -240,6 +246,9 @@
     <None Include="VoIPServer.reg" />
     <None Include="res\VoIPServer.rc2">
       <Filter>리소스 파일</Filter>
+    </None>
+    <None Include="resource.hm">
+      <Filter>헤더 파일</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -369,6 +378,24 @@
       <Filter>리소스 파일</Filter>
     </Image>
     <Image Include="res\homer.ico">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\delete.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\enable.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\refresh.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\disable.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\connected.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\disconnected.bmp">
       <Filter>리소스 파일</Filter>
     </Image>
   </ItemGroup>
