--- a/src/VoIPClient/VoIPClient.vcxproj.filters
+++ b/src/VoIPClient/VoIPClient.vcxproj.filters
@@ -482,6 +482,8 @@
     <Image Include="res\vad_1.bmp">
       <Filter>리소스 파일</Filter>
     </Image>
+    <Image Include="res\shutdown-64.bmp" />
+    <Image Include="res\start-64.bmp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="VoIPClient.reg" />
