--- a/src/VoIPClient/VoIPClient.rc
+++ b/src/VoIPClient/VoIPClient.rc
@@ -403,10 +403,10 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     EDITTEXT        IDC_ED_EMAIL_ID,52,52,158,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_ED_PASSWORD,52,74,158,14,ES_PASSWORD | ES_AUTOHSCROLL
-    CONTROL         "",IDC_MFCBTN_LOGIN,"MfcButton",WS_TABSTOP,52,95,68,49,WS_EX_TRANSPARENT
-    CONTROL         "",IDC_MFCBTN_SIGN_IN,"MfcButton",WS_TABSTOP,141,96,68,49,WS_EX_TRANSPARENT
+    CONTROL         "",IDC_MFCBTN_LOGIN,"MfcButton",WS_TABSTOP,52,105,64,38,WS_EX_TRANSPARENT
+    CONTROL         "",IDC_MFCBTN_SIGN_IN,"MfcButton",WS_TABSTOP,141,103,67,43,WS_EX_TRANSPARENT
     ICON            IDI_MASK,IDC_ST_LOGO,120,21,20,20
-    CONTROL         "",IDC_MFCBTN_RESET_PW,"MfcButton",WS_TABSTOP,95,153,68,49,WS_EX_TRANSPARENT
+    CONTROL         "",IDC_MFCBTN_RESET_PW,"MfcButton",WS_TABSTOP,95,161,69,45,WS_EX_TRANSPARENT
 END
 
 IDD_DLG_MANAGE_ACCOUNT DIALOGEX 0, 0, 251, 214
@@ -491,7 +491,7 @@ STYLE DS_SETFONT | DS_SETFOREGROUND | WS_POPUP | WS_SYSMENU
 EXSTYLE WS_EX_PALETTEWINDOW | WS_EX_ACCEPTFILES | WS_EX_TRANSPARENT
 FONT 12, "MS Sans Serif", 400, 0, 0x0
 BEGIN
-    CONTROL         IDB_MOOZ,IDC_BMP_MOOZ,"Static",SS_BITMAP | SS_REALSIZEIMAGE,7,7,311,200,WS_EX_ACCEPTFILES
+    CONTROL         IDB_MOOZ,IDC_BMP_MOOZ,"Static",SS_BITMAP,7,7,311,200,WS_EX_ACCEPTFILES
     CONTROL         "",IDC_IPADDRESS_SERVER,"SysIPAddress32",WS_TABSTOP,108,192,107,15,WS_EX_TRANSPARENT
     CONTROL         "",IDC_MFCBTN_START,"MfcButton",WS_TABSTOP,287,177,31,30,WS_EX_TRANSPARENT
     CONTROL         "",IDC_MFCBTN_SHUTDOWN,"MfcButton",WS_TABSTOP,7,177,30,30,WS_EX_TRANSPARENT
