--- a/src/VoIPClient/VoIPClient.vcxproj.filters
+++ b/src/VoIPClient/VoIPClient.vcxproj.filters
@@ -118,6 +118,9 @@
     <ClCompile Include="..\media\media_config.cpp">
       <Filter>media</Filter>
     </ClCompile>
+    <ClCompile Include="VoIPNewClient.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AccountLoginDlg.h">
@@ -275,6 +278,9 @@
     </ClInclude>
     <ClInclude Include="..\media\media_config.h">
       <Filter>media</Filter>
+    </ClInclude>
+    <ClInclude Include="VoIPNewClient.h">
+      <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
